# routes/api.php
@@ -15,5 +15,19 @@ use Illuminate\Support\Facades\Route;
 | be assigned to the "api" middleware group. Make something great!
 |
 */
+/**
+ * Rutas para exportación de datos
+ */
+Route::prefix('productos')->group(function () {
+    Route::get('exportar', [ProductoController::class, 'export'])
+        ->name('productos.exportar');
+});
+
+Route::prefix('ordenes')->group(function () {
+    Route::get('exportar', [OrdenController::class, 'export'])
+        ->name('ordenes.exportar');
+});
+
+
     Route::apiResource('productos', ProductoController::class);
     Route::apiResource('ordenes', OrdenController::class);
